--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,10 +1,11 @@
 paths:
-  folder_path_rawdata: 'C:\\Users\\d.muehlfeld\\Berechnungsdaten'
-  folder_path_data: 'C:\\Users\\d.muehlfeld\\Berechnungsdaten\\Zwischenspeicher'
-  folder_path_data_predicted: 'C:\\Users\\d.muehlfeld\\Berechnungsdaten\\Predicted'
-  folder_path_data_results: 'C:\\Users\\d.muehlfeld\\Berechnungsdaten\\Results'
-  folder_path_data_GNN_dataset: 'C:\\Users\\d.muehlfeld\\Berechnungsdaten\\GNN Dataset'
-  save_path: 'C:\\Users\\d.muehlfeld\\Berechnungsdaten\\Zwischenspeicher\\saved_data'
+  folder_path_rawdata: 'C:\\Users\\D.Muehlfeld\\Documents\\Berechnungsdaten'
+  folder_path_data: 'C:\\Users\\D.Muehlfeld\\Documents\\Berechnungsdaten\\Zwischenspeicher'
+  folder_path_data_predicted: 'C:\\Users\\D.Muehlfeld\\Documents\\Berechnungsdaten\\Predicted'
+  folder_path_data_results: 'C:\\Users\\D.Muehlfeld\\Documents\\Berechnungsdaten\\Results'
+  folder_path_data_GNN_dataset: 'C:\\Users\\D.Muehlfeld\\Documents\\Berechnungsdaten\\GNN Dataset'
+  save_path: 'C:\\Users\\D.Muehlfeld\\Documents\\Berechnungsdaten\\Zwischenspeicher\\saved_data'
   knoten_file: 'export_results_13_Spechbach_RNAB.TXT_0_Node.csv'
   leitungen_file: 'export_results_13_Spechbach_RNAB.TXT_0_Pipes.csv'
-  log_file: 'C:\\Users\\d.muehlfeld\\PycharmProjects\\temp\\logs\\verify_graph.log'
+  log_file: 'C:\\Users\\D.Muehlfeld\\PycharmProjects\\Algorithm\\logs\\verify_graph.log'
+
